part of my internal API backwards.  Luckily we could repair that :)

-------------------------------------------------------------------------------

Sun Oct 31 12:24:17 PST 1999
(Mandrake)

committing what I did last night before I went to bed.  I don't remember what
this does

-------------------------------------------------------------------------------

Sun Oct 31 16:53:24 PST 1999
(Mandrake)

A little bit of work here and there.  the API is coming together nicely.  Need
to rethink a minor bit of work in _econf_save_data_to_disk -- it needs local
and global tags, etc.  I need to clean some of that up.

-------------------------------------------------------------------------------

Sun Oct 31 18:59:05 PST 1999
(Mandrake)

internal API is cleaning up now.  I think I've figured out how to resolve my
problem

-------------------------------------------------------------------------------

Sun Oct 31 20:01:43 PST 1999
(Mandrake)

cleaned up API some more, added local tags to saving, working on fat entries to
disk, realizing the need for a fsck() command, etc.  Things are still coming
along smoothly

-------------------------------------------------------------------------------

Sun Oct 31 22:13:56 PST 1999
(Mandrake)

_econf_purge_data_from_disk() should kinda work now.

-------------------------------------------------------------------------------

Sun Oct 31 23:25:12 PST 1999
(Mandrake)

disk.c is almost done now.  just a little more work needed

-------------------------------------------------------------------------------

Mon Nov  1 18:42:14 PST 1999
(Mandrake)

Mostly cleaning up some code here and there.  read over a lot of code
carefully.  Added comments here and there, too.

-------------------------------------------------------------------------------

Tue Nov  2 12:37:06 PST 1999
(Mandrake)

some more api changes - changed eConfigStoreData() and added
eConfigStoreDataToFirstAvailablePath().
