@@ -1,4 +1,4 @@
-Copyright (C) 1999 Carsten Haitzler and various contributors 
+Copyright (C) 1999 Carsten Haitzler, Geoff Harrison and various contributors
  
 Permission is hereby granted, free of charge, to any person obtaining a copy
 of this software and associated documentation files (the "Software"), to
